# chess_puzzles_llm

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: book_positions_template.csv
configs/analysis/: explanation_specificity.yaml
configs/experiments/: default.yaml
configs/prompts/: condition_a.txt  condition_b.txt  condition_c.txt  condition_calc.txt  condition_d.txt  condition_e.txt  condition_teaching.txt  proposed_move_audit.txt  proposed_move_rationalize.txt  proposed_move_scoring.txt  wrong_move_audit.txt  wrong_move_rationalize.txt
configs/surveys/: rating_dimensions.yaml
outputs/tables/: README_reasoning.md  book_move_rank_by_prompt.csv  book_move_rank_by_prompt_llama70b.csv  book_move_rank_by_prompt_qwen32b.csv  counterfactual_results.jsonl  counterfactual_sensitivity_summary.csv  engine_depth_sensitivity.csv  engine_depth_sensitivity_details.csv  explanation_alignment_summary.csv  explanation_alignment_table.csv  groq_200_prompt_summary.csv  lichess_200_all_prompts_merged.csv  lichess_200_correlation_analysis.csv  lichess_200_error_taxonomy_sample.csv  lichess_200_masking_ablation.csv  lichess_200_prompt_summary.csv  lichess_200_prompt_verbosity_recoverability.csv  lichess_200_sections_brief.json  (+22 more)
paper/: main.tex  neurips_2025.sty
scripts/: run_groq_models.sh  run_groq_stockfish.sh
tests/: test_annotations.py  test_book_ingest.py  test_endgame_labeling.py  test_masking.py  test_moves.py  test_openai_extract.py  test_ratings.py  test_sampling.py  test_specificity.py  test_stockfish_eval.py  test_wrong_move_rationalization.py
(+46 files in other folders)
